testdata/ns-npt-0/permit-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: ns-npt-0
spec:
  podSelector: {}
  policyTypes:
  - Ingress
